--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
         </head>
         <body>
             <div>
-                <h1>Motivation Board</h1>
-                <p>Share your fuel of Motivation with others</p>
+                <h1>Endorsements Board</h1>
+                <p>Share some words of kindness with another person</p>
             </div>
 
             <div>
