--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
     <!DOCTYPE html>
     <html>
         <head>
-            <title>Motivation Board</title>
+            <title>JoyJot</title>
             <link rel="stylesheet" href="style.css">
             <script type="module" src="index.js"></script>
         </head>
         <body>
             <div>
-                <h1>Endorsements Board</h1>
-                <p>Share some words of kindness with another person</p>
+                <h1> <span>📌</span> JoyJot - Endorsement Board </h1>
+                <p>Jot a joyful message and bring a smile to faces.</p>
             </div>
 
             <div>
