--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
                 <div>
                     <h1>JoyJot</h1>
                     <p class="ta-center">Jot a joyful message and bring a smile to faces.</p>
+                    <hr>
                 </div>
                 
                 <div id="input-container">
@@ -36,9 +37,8 @@
                 </div>
                     
                 <div>
-                    <h1><span class="material-symbols-outlined">
-                        sticky_note
-                        </span> Posts</h1>
+                    <h1><span class="material-symbols-outlined">sticky_note</span> Posts</h1>
+                    <hr>
                     <ul id="post-lists">
                     </ul>
                 </div>
