--- a/index.html
+++ b/index.html
@@ -17,16 +17,21 @@
             <script type="module" src="index.js"></script>
         </head>
         <body>
+            <div id="nav-bar">
+                <div> 
+                    <h1>JoyJot</h1>
+                    <button><a href="">Login</a></button>
+                </div>
+            </div>
+
             <div id="main-content">
                 <div>
-                    <h1>JoyJot</h1>
-                    <p class="ta-center">Jot a joyful message and bring a smile to faces.</p>
-                    <hr>
+                    <p class="ta-center"></p>
                 </div>
                 
                 <div id="input-container">
                     <div>
-                        <textarea id="text-input" name="text-input" rows="3" cols="50" placeholder="Type something here" maxlength="400"></textarea>
+                        <textarea id="text-input" name="text-input" rows="3" cols="50" placeholder="Jot a joyful message and bring a smile to faces..." maxlength="400"></textarea>
                         <!-- <input id="text-input" type="text" placeholder="Write your here message here"> -->
                     </div>
                     <div class="flex-space-even">
